Works UART but strange spaces in cat

--- a/adapter/Makefile
+++ b/adapter/Makefile
@@ -90,6 +90,9 @@ ifeq ($(DEVICE),stm32f303vct6)
             $(DEVICE_DIR)/hal/Src/stm32f3xx_hal_pcd_ex.c \
             $(DEVICE_DIR)/hal/Src/stm32f3xx_hal_pcd.c \
             $(DEVICE_DIR)/hal/Src/stm32f3xx_ll_usb.c \
+            $(DEVICE_DIR)/hal/Src/stm32f3xx_hal_dma.c \
+            $(DEVICE_DIR)/hal/Src/stm32f3xx_hal_uart_ex.c \
+            $(DEVICE_DIR)/hal/Src/stm32f3xx_hal_uart.c \
             $(DEVICE_DIR)/cmsis/Device/ST/STM32F3xx/Source/system_stm32f3xx.c \
             $(DEVICE_DIR)/middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c \
             $(DEVICE_DIR)/middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c \
